# active-handout-plugins-py

./: .gitignore  MANIFEST.in  README.md  compile_translations.sh  package.json  requirements.txt  setup.cfg  setup.py  update_translations.sh
.github/workflows/: django.yml
backend/: .env.sample  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.yml  post_build.sh
backend/app/: .gitignore  README.md  manage.py  requirements.txt
backend/app/_unittest/: __init__.py
backend/app/active_handout_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/core/: admin.py  models.py  package.json  permissions.py  serializers.py  shortcuts.py  signals.py  tests.py  urls.py  views.py
backend/app/dashboard/: package.json  query.py  tag_tree.py  test_utils.py  tests.py  urls.py  views.py
backend/docker/proxy/: Dockerfile
exercises_plugin/: setup.cfg
exercises_plugin/src/contributors/: plugin.py
exercises_plugin/src/css_exercises/: plugin.py  plugin_helper.py  (+2 more)
scripts/: post_exercise_list.py
src/: babel.cfg  compile_translations.sh  update_translations.sh
src/active_handout_plugins/: __init__.py  admonition.py  counter.py  css_exercise.py  dashboard.py  exercise.py  exercise_manager.py  footnote.py  l10n.py  mkdocs_plugin.py  parsons.py  pdf.py  progress.py  question.py  templating.py  utils.py  video.py
src/active_handout_theme/: base.html  header-start.html  main-full.html  main.html  messages.pot  nav.html
src/contributors/: plugin.py
src/dev_environment/: plugin.py
src/handout_exercises/: exercise.py  navigation.py  plugin.py
(+227 files in other folders)
