[metadata]
name = active-handout-plugins-py
version = 0.2.3
author = Igor Montagner
author_email = igordsm@gmail.com
description = Mkdocs plugins for the insper active handout
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/insper-education/active-handout-plugins-py
project_urls =
    Bug Tracker = https://github.com/insper-education/active-handout-plugins-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    mkdocs
    bs4
    requests

[options.packages.find]
where = src

[options.entry_points]
mkdocs.plugins =
    active-exercises = handout_exercises.plugin:FindExercises
    contributors = contributors.plugin:ListContributors
    dev-environment = dev_environment.plugin:LocalReport
